# runbook

./: .gitignore  README.md  biome.json  components.json  next.config.ts  package.json  tsconfig.json
.github/workflows/: release.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/db/: cells.rs  folders.rs  mod.rs  notebooks.rs  schema.sql  settings.rs
src-tauri/src/execute/: mod.rs
src-tauri/src/export/: mod.rs
src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
src/app/notebooks/: page.tsx
src/app/notebooks/new/: form.tsx  page.tsx
src/app/settings/: page.tsx
src/components/home/: EmptyState.tsx  FolderNode.tsx  NotebookItem.tsx  PaginationControls.tsx  SearchBar.tsx  types.ts
src/components/layout/: AppShell.tsx  app-header.tsx  app-sidebar.tsx  sidebar-wrapper.tsx
src/components/notebook/: AddCellBar.tsx  CellList.tsx  CellToolbar.tsx  CodeCell.tsx  CreateFolderDialog.tsx  DeleteCellDialog.tsx  DeleteFolderDialog.tsx  DeleteNotebookDialog.tsx  InsertCellDivider.tsx  MarkdownCell.tsx  MonacoEditor.tsx  NotebookCanvasNav.tsx  NotebookEditor.tsx  OutputPanel.tsx
src/components/providers/: theme-provider.tsx
src/components/search/: SearchModal.tsx
src/hooks/: useAutoSave.ts  useExecute.ts  useNotebook.ts  usePagination.ts
src/lib/: events.ts  folders.ts  languages.ts  tauri.ts
src/types/: index.ts
